--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
 
 <body>
     <a href="" id="downloadAnchorElem" style="display: none;"></a>
+    <div>
+        <h3>Load template</h3>
+        <button onclick="loadFromUrl('https://raw.githubusercontent.com/Marius-brt/Car-Graphs/master/subaru.json')">Subaru Impreza Wrx 2004</button>
+    </div>
     <div class="container">
         <div class="settings">
             <h3>Engine</h3>
