--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
 <body>
     <a href="" id="downloadAnchorElem" style="display: none;"></a>
+    <a href="https://github.com/Marius-brt/Car-Graphs" target="_blank">Github</a>
     <div>
         <h3>Load template</h3>
         <button onclick="loadFromUrl('https://raw.githubusercontent.com/Marius-brt/Car-Graphs/master/subaru.json')">Subaru Impreza Wrx 2004</button>
